[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finviz-performance-trends"
version = "0.1.0"
description = "A script to extract, clean, and analyze sector performance trends using Finviz data."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "finvizfinance>=0.14.7",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0"
]

[tool.setuptools]
py-modules = ["trends", "screener"]

[project.scripts]
# This allows you to run your script from the terminal by typing 'finviz-trends'
finviz-trends = "trends:main"
finviz-screener = "screener:main"

